[package]
name = "steamer"
version = "1.1.1"
edition = "2024"
description = "A CLI tool to automate adding steamgrid assets to your steam library"
readme = "README.md"
repository = "https://github.com/kaezrr/steamer"
license-file = "LICENSE"
keywords = ["steam", "steamgrid"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
futures-util = "0.3.32"
indicatif = "0.18.4"
keyvalues-parser = "0.2.3"
new-vdf-parser = "0.2.0"
reqwest = { version = "0.13.3", features = ["json", "query", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
steamlocate = "2.1.0"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"

# Annoying lints that I don't want
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "symbols"
lto = "thin"
panic = "abort"
codegen-units = 1
